添加积分管理

--- a/商城管理.md
+++ b/商城管理.md
@@ -11,6 +11,7 @@
     {
     	name: GOODSNAME,
         desc: GOODSDESCRIPTION,
+        explain: EXPLAIN,
         img: GOODSIMG,
         count: GOODSTOTAL,
         cLevel: USERLEVEL,
@@ -22,7 +23,8 @@
 |参数|说明|
 |---|---|
 |name|商品名称|
-|desc|商品介绍|
+|desc|商品简介|
+|explain|商品说明|
 |img|商品图片|
 |count|商品总量|
 |cLevel|兑换商品用户等级|
@@ -124,6 +126,7 @@
     	name: GOODSNAME,
         img: GOODSIMG,
         desc: GOODSDESCRIPTION,
+        explain: EXPLAIN,
         count: GOODSTOTAL,
         cLevel: USERLEVEL,
         cPoint: USERPOINT,
@@ -155,6 +158,20 @@
 |参数|说明|
 |---|---|
 |ID|商品ID，需要删除的商品|
+###删除多个商品
+删除多个商品
+**http说明**
+
+	管理平台API： cms.dmday.cn/api/goods?access_token=ACCESSTOKEN&ids=1&ids=2
+    远程API： www.dmday.cn/apis/goods?access_token=ACCESSTOKEN
+    请求方式： DELETE
+|参数|说明|
+|---|----|
+|ids|商品ID(数组)|
+	返回示例：
+    {
+    	status: 200
+    }
 ###商品详情
 **http说明**
 	
@@ -170,6 +187,7 @@
     	name: GOODSNAME,
         img: GOODSIMG,
         desc: GOODSDESCRIPTION,
+        explain: EXPLAIN,
         count: GOODSTOTAL,
         cLevel: USERLEVEL,
         cPoint: USERPOINT,
@@ -347,6 +365,19 @@
 	管理平台API： cms.dmday.cn/api/orders/ID？access_token=ACCESSTOKEN
     远程API: www.dmday.cn/apis/orders/ID?access_token=ACCESSTOKEN
     请求方式： DELETE
+###删除多个订单
+**http说明**
+
+	管理平台API： cms.dmday.cn/api/orders?access_token=ACCESSTOKEN&ids=1&ids=2
+    远程API： www.dmday.cn/apis/orders?access_token=ACCESSTOKEN
+    请求方式： DELETE
+|参数|说明|
+|---|----|
+|ids|订单ID(数组)|
+	返回示例：
+    {
+    	status: 200
+    }
 ###获取用户订单列表
 用户通过该接口获取订单列表
 **http说明**
